# MetaSeal

./: .gitignore  README.md  index.html  metaseal-dev.skill  package-lock.json  package.json  push.sh  tailwind.config.js  update_repo.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml
docs/: USER_GUIDE_zh.md
models/: t2_deep_shield_v1.onnx
src/: App.css  App.tsx  index.css  pdf_engine.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: arweave_engine.rs  cert_engine.rs  code_engine.rs  doc_engine.rs  image_engine.rs  lib.rs  main.rs  model_manager.rs  ots_engine.rs  settings_manager.rs  t2_engine.rs
src-tauri/src/tests/: verify_ots.rs  verify_t1.rs  verify_t2_onnx.rs
src/components/: Certificate.tsx
