[package]
name = "metaseal"
version = "1.1.0"
description = "MetaSeal - Creator Copyright Protection Tool"
authors = ["xastle"]
edition = "2021"

[lib]
name = "metaseal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# 纯 Rust 图像处理，无需 cmake 或 C++ 编译器，可在所有平台零配置编译
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
rustdct = "0.6"
reqwest = { version = "0.12", features = ["json", "stream"] }
# ort = { version = "2.0.0-rc.9", features = ["copy-dylibs"] }
futures-util = "0.3"
# ndarray = "0.16"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4.44"
base64 = "0.22.1"

[target.'cfg(any(target_arch = "aarch64", target_os = "windows"))'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["copy-dylibs"] }
ndarray = "0.16"
